--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>hey cool kid</title> 
     <style>
 #lbl {
-    font-family: monospace;
+    font-family: serif;
     font-size: xx-large;
     color: #626262;
     padding: 5px;
@@ -45,11 +45,11 @@ body{
     var greet;
 
     if (hrs < 12)
-        greet = 'Good Morning  ';
+        greet = 'hey cool kid  ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'Good Afternoon ';
+        greet = 'hey cool kid ';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'Good Evening  ';
+        greet = 'hey cool kid  ';
 
     document.getElementById('lbl').innerHTML =
         greet+=`<div id="date"> It's ${date}</div>`;
