--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <html> 
 <head>
-    <title>hey cool kid</title> 
+    <body>Hey cool kid</body> 
     <style>
 #lbl {
     font-family: serif;
-    font-size: xx-large;
+    font-size: large;
     color: #626262;
     padding: 5px;
     border: 1px solid #ececec;
     text-align: center;
-    line-height: 1.5;
     height:85%
 
 
