--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body{
     </style>
 </head>
 <body>
-    <div id="lbl"></div>
+   <body>Hey cool kid</body>  <div id="lbl"></div>
 </body>
 
 <script>
