--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ h1 {
 
 .clock {
     display: inline;
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 2em;
    
 }
