--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ h1 {
 .card {
     padding: 10px 25px 10px 25px;
     border-radius: 10px;
-    background: #93b7e2;
+    background: #b8d3f2;
     width: 85vw;
     color: #fff;
     display: inline-block;
